# First_rep

./: .env  HW_kurs.py  README.md  UML.drawio  create_table.sql  distance_dict_tuple_drone.py  factorize_HW2.py  hw9.py  hw9_v2.py  hw9_v3.py  hw9_v4.py  main.py  pyproject.toml  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  readme.txt  sort_files.py  sorter_thread.py
HW10_Django/: pyproject.toml
HW10_Django/hw10_project/: connect.py
HW10_Django/hw10_project/hw10_project/: settings.py  urls.py
HW10_Django/hw10_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
HW10_Django/hw10_project/users/: forms.py  views.py
HW10_Django/hw10_project/utils/: authors.json  quotes.json
HW11/: main.py
HW11/migrations/: env.py
HW11/migrations/versions/: b62890ea9fc8_init.py
HW11/src/: schemas.py
HW11/src/database/: db.py  models.py
HW11/src/repository/: contacts.py
HW11/src/routes/: contacts.py
HW12/: main.py
HW12/src/: schemas.py
HW12/src/database/: db.py  models.py
HW12/src/repository/: contacts.py
HW12/src/routes/: contacts.py
HW12/src/services/: auth.py
HW7/: config.ini  my_select.py  pyproject.toml  seed.py
HW7/conf/: models.py
HW7/migrations/versions/: 7765a14120d7_init.py  9516683fa9de_init5.py
HW8/: check_homework.py  main.py  pyproject.toml
HW8/hw8/: config.ini  connect.py  consumer.py  find.py  models.py  producer.py  seeds.py
assistant/: __init__.py  abstract.py  assistant.py  dockerfile  main.py  pyproject.toml  requirements.txt
assistant/records/: __init__.py  contact.py  field.py  note.py
assistant/utils/: __init__.py  contactbook.py  notebook.py
clean_folder-0.6/: PKG-INFO  setup.py
clean_folder-0.6/clean_folder/: clean.py
clean_folder-0.6/clean_folder.egg-info/: PKG-INFO
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hw/: main.py
hw/migrations/versions/: 451001675900_init.py  66cf58a6fc8f_init.py
hw/src/: schemas.py
hw/src/database/: db.py  models.py
hw/src/repository/: contacts.py  users.py
hw/src/routes/: auth.py  contacts.py
hw/src/services/: auth.py
hw09/: config.ini  connect.py  main.py  pyproject.toml
hw09/hw09/: scrapy.cfg
hw09/hw09/hw09/: items.py  middlewares.py  pipelines.py  settings.py
postgres-data/base/13481/: 1247  1249  16387  16389  16391  16398  16400  16402  16404  2224  2579  2604  2606  2620  2656  2658  2659  2662  2663  2666  2667  2678  2699  2702  2704  3455  5002
postgres-data/global/: pg_internal.init
postgres-data/pg_stat/: db_13481.stat  global.stat
src/conf/: config.py
src/database/: db.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
storage/: data.json
tests/: test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
ч1_fastAPI/: main.py
ч1_fastAPI/migrations/versions/: 60ce165ec9e3_init.py
ч1_fastAPI/postgres-data/global/: pg_control
ч1_fastAPI/postgres-data/pg_stat/: db_0.stat
ч1_fastAPI/src/: schemas.py
ч1_fastAPI/src/conf/: config.py
ч1_fastAPI/src/database/: db.py  models.py
ч1_fastAPI/src/repository/: contacts.py  users.py
ч1_fastAPI/src/routes/: auth.py  contacts.py
ч1_fastAPI/src/services/: auth.py  email.py
(+22 files in other folders)
