[tool.poetry]
name = "module-12"
version = "0.1.0"
description = ""
authors = ["Y3vh3n11 <145870816+Y3vh3n11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
fastapi-jwt-auth = "^0.5.0"
sqlalchemy = "^2.0.29"
python-multipart = "^0.0.9"
libgravatar = "^1.0.4"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
