[tool.poetry]
name = "module-14"
version = "0.1.0"
description = ""
authors = ["Y3vh3n11 <145870816+Y3vh3n11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
libgravatar = "^1.0.4"
cloudinary = "^1.40.0"
pillow = "^10.3.0"
fastapi-mail = "^1.4.1"
uvicorn = "^0.29.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
python-multipart = "^0.0.9"
fastapi-jwt-auth = "^0.5.0"
bcrypt = "^4.1.3"
pymongo = "^4.7.2"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
