[tool.poetry]
name = "hw8"
version = "0.1.0"
description = ""
authors = ["Y3vh3n11 <145870816+Y3vh3n11@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.6.2"}
mongoengine = "^0.28.2"
faker = "^24.2.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
